Bug 28656 [launcher] Can't run eclipse from a UNC pathname